--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,3 +2,14 @@ site_name: Lecture Notes
 site_url: https://xeonliu.github.io/LectureNotes
 theme:
   name: material
+markdown_extensions:
+  - pymdownx.arithmatex:
+      generic: true
+
+extra_javascript:
+  - javascripts/katex.js
+  - https://unpkg.com/katex@0/dist/katex.min.js
+  - https://unpkg.com/katex@0/dist/contrib/auto-render.min.js
+
+extra_css:
+  - https://unpkg.com/katex@0/dist/katex.min.css
